--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
             <div class="pattern-bg"></div>
             <div class="img-box">
-              <img src="./assets/images/hero.png" alt="Julia Walker" class="hero-img">
+              <img src="./assets/images/author-1.jpg" alt="Julia Walker" class="hero-img">
               <div class="shape shape-1"></div>
               <div class="shape shape-2"></div>
             </div>
