--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               <div class="blog-card">
 
                 <figure class="card-banner img-holder" style="--width: 500; --height: 600;">
-                  <img src="./assets/images/featured-1.jpg" width="500" height="600" loading="lazy"
+                  <img src="./assets/images/netflix.jpg" width="500" height="600" loading="lazy"
                     alt="New technology is not good or evil in and of itself" class="img-cover">
 
                   <ul class="avatar-list absolute">
@@ -246,7 +246,7 @@
               <div class="blog-card">
 
                 <figure class="card-banner img-holder" style="--width: 500; --height: 600;">
-                  <img src="./assets/images/featured-2.jpg" width="500" height="600" loading="lazy"
+                  <img src="./assets/images/JENISSA.jpg" width="500" height="600" loading="lazy"
                     alt="It’s a new era in design, there are no rules" class="img-cover">
 
                   <ul class="avatar-list absolute">
