--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               <div class="blog-card">
 
                 <figure class="card-banner img-holder" style="--width: 500; --height: 600;">
-                  <img src="./assets/images/netflix.jpg" width="500" height="600" loading="lazy"
+                  <img src="./assets/images/netlfix.jpg" width="500" height="600" loading="lazy"
                     alt="New technology is not good or evil in and of itself" class="img-cover">
 
                   <ul class="avatar-list absolute">
