--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
               <div class="blog-card">
 
                 <figure class="card-banner img-holder" style="--width: 500; --height: 600;">
-                  <img src="./assets/images/featured-3.jpg" width="500" height="600" loading="lazy"
+                  <img src="./assets/images/ndu.jpg" width="500" height="600" loading="lazy"
                     alt="Perfection has to do with the end product" class="img-cover">
 
                   <ul class="avatar-list absolute">
