--- a/index.html
+++ b/index.html
@@ -1345,6 +1345,11 @@
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
+  <div class="enlarged-image" style="display: none;">
+  <img src="" alt="Enlarged Image">
+</div>
+
+
 </body>
 
 </html>
