--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
               <div class="blog-card">
 
                 <figure class="card-banner img-holder" style="--width: 500; --height: 600;">
-                  <img src="./assets/images/featured-4.jpg" width="500" height="600" loading="lazy"
+                  <img src="./assets/images/baddie.jpg" width="500" height="600" loading="lazy"
                     alt="Everyone has a different life story" class="img-cover">
 
                   <ul class="avatar-list absolute">
