--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
               <div class="blog-card">
 
                 <figure class="card-banner img-holder" style="--width: 500; --height: 600;">
-                  <img src="./assets/images/featured-5.jpg" width="500" height="600" loading="lazy"
+                  <img src="./assets/images/afro.jpg" width="500" height="600" loading="lazy"
                     alt="The difference is quality" class="img-cover">
 
                   <ul class="avatar-list absolute">
