--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
               <div class="blog-card">
 
                 <figure class="card-banner img-holder" style="--width: 500; --height: 600;">
-                  <img src="./assets/images/featured-6.jpg" width="500" height="600" loading="lazy"
+                  <img src="./assets/images/love.jpg" width="500" height="600" loading="lazy"
                     alt="Problems are not stop signs, they are guidelines" class="img-cover">
 
                   <ul class="avatar-list absolute">
