--- a/index.html
+++ b/index.html
@@ -129,8 +129,7 @@
           <div class="left">
 
             <h1 class="h1">
-              Hi, I'm <b>Julia&nbsp;Walker</b>.
-              <br>Web Developer
+              Made with Love for Jenissa Cortes
             </h1>
 
             <p class="h3">
