--- a/index.html
+++ b/index.html
@@ -512,47 +512,9 @@
           <div class="title-wrapper">
 
             <h2 class="h2 section-title">
-              See what we’ve <strong class="strong">written lately</strong>
+              See how much your friends & family <strong class="strong">love you</strong>
             </h2>
-
-            <div class="top-author">
-              <ul class="avatar-list">
-
-                <li class="avatar-item">
-                  <a href="#" class="avatar large img-holder" style="--width: 100; --height: 100;">
-                    <img src="./assets/images/author-1.jpg" width="100" height="100" alt="top author" class="img-cover">
-                  </a>
-                </li>
-
-                <li class="avatar-item">
-                  <a href="#" class="avatar large img-holder" style="--width: 100; --height: 100;">
-                    <img src="./assets/images/author-2.jpg" width="100" height="100" alt="top author" class="img-cover">
-                  </a>
-                </li>
-
-                <li class="avatar-item">
-                  <a href="#" class="avatar large img-holder" style="--width: 100; --height: 100;">
-                    <img src="./assets/images/author-3.jpg" width="100" height="100" alt="top author" class="img-cover">
-                  </a>
-                </li>
-
-                <li class="avatar-item">
-                  <a href="#" class="avatar large img-holder" style="--width: 100; --height: 100;">
-                    <img src="./assets/images/author-4.jpg" width="100" height="100" alt="top author" class="img-cover">
-                  </a>
-                </li>
-
-                <li class="avatar-item">
-                  <a href="#" class="avatar large img-holder" style="--width: 100; --height: 100;">
-                    <img src="./assets/images/author-5.jpg" width="100" height="100" alt="top author" class="img-cover">
-                  </a>
-                </li>
-
-              </ul>
-
-              <span class="span">Meet our top authors</span>
-            </div>
-
+            
           </div>
 
           <ul class="grid-list">
