--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
               <div class="blog-card">
 
                 <figure class="card-banner img-holder" style="--width: 550; --height: 660;">
-                  <img src="./assets/images/recent-1.jpg" width="550" height="660" loading="lazy"
+                  <img src="./assets/images/pic1.JPG" width="550" height="660" loading="lazy"
                     alt="Creating is a privilege but it’s also a gift" class="img-cover">
 
                   <ul class="avatar-list absolute">
@@ -584,7 +584,7 @@
               <div class="blog-card">
 
                 <figure class="card-banner img-holder" style="--width: 550; --height: 660;">
-                  <img src="./assets/images/recent-2.jpg" width="550" height="660" loading="lazy"
+                  <img src="./assets/images/pic2.JPG" width="550" height="660" loading="lazy"
                     alt="Being unique is better than being perfect" class="img-cover">
 
                   <ul class="avatar-list absolute">
@@ -640,7 +640,7 @@
               <div class="blog-card">
 
                 <figure class="card-banner img-holder" style="--width: 550; --height: 660;">
-                  <img src="./assets/images/recent-3.jpg" width="550" height="660" loading="lazy"
+                  <img src="./assets/images/pic3.JPG" width="550" height="660" loading="lazy"
                     alt="Now we’re getting somewhere" class="img-cover">
 
                   <ul class="avatar-list absolute">
@@ -710,7 +710,7 @@
               <div class="blog-card">
 
                 <figure class="card-banner img-holder" style="--width: 550; --height: 660;">
-                  <img src="./assets/images/recent-4.jpg" width="550" height="660" loading="lazy"
+                  <img src="./assets/images/pic4.JPG" width="550" height="660" loading="lazy"
                     alt="The trick to getting more done is to have the freedom to roam around" class="img-cover">
 
                   <ul class="avatar-list absolute">
