--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
 
 
             <div class="btn-group">
-              <a href="#" class="btn btn-primary">Contact Me</a>
-              <a href="#" class="btn btn-secondary">About Me</a>
+              <a href="assets/images/bday.mp4" class="btn btn-secondary">Click Me!</a>
             </div>
 
           </div>
