--- a/index.html
+++ b/index.html
@@ -564,9 +564,9 @@
                   </h3>
 
                   <p class="card-text">
-                    Nullam vel lectus vel velit pellentesque dignissim nec id magna. Cras molestie ornare quam at
-                    semper. Proin a ipsum ex.
-                    Curabitur eu venenatis justo. Nullam felis augue, imperdiet at sodales a, sollicitudin nec risus.
+                    I remember this day and so many others but the bright tones in the room symbolize how I always remember Nissa.
+                    She is so bright and we always go on the best adventures. Also, that milkshake and fries were sooo good and she 
+                    was down to do whatever :)
                   </p>
 
                 </div>
@@ -618,11 +618,9 @@
                   </h3>
 
                   <p class="card-text">
-                    Nam in pretium dui. Phasellus dapibus, mi at molestie cursus, neque eros aliquet nisi, non
-                    efficitur nisi est nec mi.
-                    Nullam semper, ligula a luctus ornare, leo turpis fermentum lectus, quis volutpat urna orci a
-                    lectus. Duis et odio
-                    lobortis, auctor justo ut, egestas magna.
+                    The one with her in blonde hair, I remember I was super bummed that my university was so close to 
+                    Chicago, but she went to Evanston with me and made it seem so pretty. We went to the beach and just
+                    put our feet in the sand while talking about the most random things. It gave me confidence about college.
                   </p>
 
                 </div>
@@ -688,11 +686,10 @@
                   </h3>
 
                   <p class="card-text">
-                    Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec
-                    volutpat rhoncus quam,
-                    a feugiat elit gravida eget. Curabitur id pharetra ligula. Integer porttitor suscipit ante ac
-                    faucibus. Sed a enim non
-                    enim viverra pulvinar vel diam ut lorem congue feugiat.
+                    I remember that I had to stay in a hotel due to personal matters and I was really bummed 
+                    that I couldn’t celebrate my 16th birthday because of Covid. But Nissa randomly showed up
+                    to the hotel and spent the entire day with me and we got all dressed up- she really made 
+                    that day great for me and was like my superhero!
                   </p>
 
                 </div>
@@ -740,18 +737,16 @@
                   </h3>
 
                   <p class="card-text">
-                    Integer nec mi cursus, blandit est et, auctor mauris. Aenean ex metus, faucibus in mattis at,
-                    tincidunt eu dolor. Cras
-                    hendrerit massa nec augue placerat rutrum. Sed facilisis massa enim, ac tempus diam elementum sit
-                    amet.
+                  I don’t remember when we took this picture, but we always take the most random pictures
+                    without context and it reminded me of how spontaneous Nissa is. Also she is picture perfect
+                    even when you catch her candid !
                   </p>
 
                 </div>
 
               </div>
             </li>
-             
-          <button class="btn">Load more</button>
+            
 
         </div>
       </section>
