--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
   <header class="header section" data-header>
     <div class="container">
 
-      <a href="#" class="logo">
-        <img src="./assets/images/logo.svg" width="129" height="40" alt="Blogy logo">
-      </a>
+     <!--  <a href="#" class="logo">
+       <img src="./assets/images/logo.svg" width="129" height="40" alt="Blogy logo">
+      </a>-->
 
       <nav class="navbar" data-navbar>
         <ul class="navbar-list">
